Fix time alignment.

--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
   line-height: 1.5;
   margin-bottom: 0.5rem;
 }
-p {
+p, time {
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
 }
